--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@google/genai": "^1.34.0",
+    "framer-motion": "^12.34.0",
     "lenis": "^1.3.17",
     "lucide-react": "^0.562.0",
     "react": "^19.2.3",
